--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "homepage": "https://github.com/redhataccess/stratajs",
   "dependencies": {
-    "jsuri": "~1.3.0-beta.1",
+    "jsUri": "~1.2.1",
     "lodash": "~2.4.1",
     "request": "~2.48.0"
   },
